*** empty log message ***

--- a/Makefile.in
+++ b/Makefile.in
@@ -172,7 +172,7 @@ else
         DEFAULT_CPPCMD='$(DEFAULT_CPPCMD)' ; export DEFAULT_CPPCMD ;\
 	SYSTEM_LIBDIR='$(SYSTEM_LIBDIR)' ; export SYSTEM_LIBDIR ;\
 	DEFAULT_LARCHPATH='".:$(LIBDIR)/"' ; export DEFAULT_LARCHPATH ;\
-	LINKFLAGS='$(LINKFLAGS)'; export LINK_FLAGS; \
+	LINKFLAGS='$(LINKFLAGS)'; export LINKFLAGS; \
 	DEFAULT_LCLIMPORTDIR='"$(IMPORTSDIR)"' ; export DEFAULT_LCLIMPORTDIR ;\
 	$(MAKE) -e 
 endif
