*** empty log message ***

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,8 +1,10 @@
+LCLINT = lclint
+
 all:
-	-../bin/lclint -nolib +impconj ansi.h -dump ansi 
-	-../bin/lclint -nolib +impconj -DSTRICT ansi.h -dump ansistrict
-	-../bin/lclint -nolib +impconj ansi.h posix.h -dump posix
-	-../bin/lclint -nolib +impconj -DSTRICT ansi.h posix.h -dump posixstrict
-	-../bin/lclint -nolib +impconj ansi.h posix.h unix.h -dump unix
-	-../bin/lclint -nolib +impconj -DSTRICT ansi.h posix.h unix.h -dump unixstrict
+	-${LCLINT} -nolib +impconj ansi.h -dump ansi 
+	-${LCLINT} -nolib +impconj -DSTRICT ansi.h -dump ansistrict
+	-${LCLINT} -nolib +impconj ansi.h posix.h -dump posix
+	-${LCLINT} -nolib +impconj -DSTRICT ansi.h posix.h -dump posixstrict
+	-${LCLINT} -nolib +impconj ansi.h posix.h unix.h -dump unix
+	-${LCLINT} -nolib +impconj -DSTRICT ansi.h posix.h unix.h -dump unixstrict
 
