Added fileTable tracking of open files, so they may be closed on fatal exits.

--- a/test/Makefile
+++ b/test/Makefile
@@ -655,6 +655,7 @@ freearray:
 ###
 
 tests2.2:
+	@echo "  Note: expect difference in name of unclosed file."
 	setenv LCLINT '$(LCLINTRN)'; cd tests2.2 ; $(MAKE) -e
 
 tests2.2a:
