Updated specifications in the unix library.  Added the file stdio.h and stdlib.h will corespond to the library files as defined by the open group.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,10 +1,10 @@
-LCLINT = lclint
+LCLINT = ../bin/lclint
 
 all:
 	-${LCLINT} -nolib +impconj ansi.h -dump ansi 
 	-${LCLINT} -nolib +impconj -DSTRICT ansi.h -dump ansistrict
 	-${LCLINT} -nolib +impconj ansi.h posix.h -dump posix
 	-${LCLINT} -nolib +impconj -DSTRICT ansi.h posix.h -dump posixstrict
-	-${LCLINT} -nolib +impconj ansi.h posix.h unix.h -dump unix
+	-${LCLINT} -nolib +impconj ansi.h posix.h unix.h stdio.h -dump unix
 	-${LCLINT} -nolib +impconj -DSTRICT ansi.h posix.h unix.h -dump unixstrict
 
