--- a/lib/Makefile
+++ b/lib/Makefile
@@ -5,6 +5,6 @@ all:
 	-${LCLINT} -nolib +impconj -DSTRICT ansi.h -dump ansistrict
 	-${LCLINT} -nolib +impconj ansi.h posix.h -dump posix
 	-${LCLINT} -nolib +impconj -DSTRICT ansi.h posix.h -dump posixstrict
-	-${LCLINT} -nolib +impconj ansi.h posix.h unix.h stdio.h -dump unix
+	-${LCLINT} -nolib +impconj ansi.h posix.h unix.h stdio.h stdlib.h -dump unix
 	-${LCLINT} -nolib +impconj -DSTRICT ansi.h posix.h unix.h -dump unixstrict
 
